@@ -1,3 +1,6 @@
+2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
+	* gen_pub_plotfiles.m:  switched to logentries over throwing errors.
+
 2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>
 	* count_dlim.m:  edited documentation.
 	* gen_pub_plotfiles.m:  no longer closes the figure/handle it was given once it's through with it.
